--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Flask==2.3.3
 Flask-Login==0.6.2
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.1
+Flask-Migrate==4.0.5
 docker==7.0.0
 python-dotenv==1.0.0
 Werkzeug==2.3.7
