--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,9 @@ SECRET_KEY=your_secret_key_here
 FLASK_APP=app
 FLASK_ENV=development
 DATABASE_URI=sqlite:///app.db
-DOCKER_HOST=unix:///var/run/docker.sock
+# For Linux/macOS:
+# DOCKER_HOST=unix:///var/run/docker.sock
+# For Windows:
+DOCKER_HOST=npipe:////./pipe/docker_engine
 ADMIN_EMAIL=admin@example.com
 ADMIN_PASSWORD=change_this_password 
