--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,18 +7,18 @@ services:
       - "5000:5000"
     volumes:
       # For Linux/macOS:
-      # - /var/run/docker.sock:/var/run/docker.sock
+      - /var/run/docker.sock:/var/run/docker.sock
       # For Windows:
-      - //./pipe/docker_engine://./pipe/docker_engine
+      # - //./pipe/docker_engine://./pipe/docker_engine
     environment:
       - SECRET_KEY=change_this_to_a_secure_random_string
       - FLASK_APP=app
       - FLASK_ENV=production
       - DATABASE_URI=sqlite:///app.db
       # For Linux/macOS:
-      # - DOCKER_HOST=unix:///var/run/docker.sock
+      - DOCKER_HOST=unix:///var/run/docker.sock
       # For Windows:
-      - DOCKER_HOST=npipe:////./pipe/docker_engine
+      # - DOCKER_HOST=npipe:////./pipe/docker_engine
     restart: unless-stopped
     user: root  # Required to access Docker socket
     networks:
